<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="setting">
    <PreferenceCategory android:title="@string/pref_header_about"
        android:key="about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:key="vcode"
            android:title="@string/title_version" />

        <Preference
            android:key="key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_device"
        android:key="device">

        <Preference
            android:key="SERIAL"
            android:title="@string/title_SERIAL" />
        <Preference
            android:key="MODEL"
            android:title="@string/title_MODEL" />
        <Preference
            android:key="ID"
            android:title="@string/title_ID" />
        <Preference
            android:key="MANUFACTURE"
            android:title="@string/title_MANUFACTURE" />
        <Preference
            android:key="TYPE"
            android:title="@string/title_TYPE" />
        <Preference
            android:key="USER"
            android:title="@string/title_USER" />
        <Preference
            android:key="INCREMENTAL"
            android:title="@string/title_INCREMENTAL" />
        <Preference
            android:key="BOARD"
            android:title="@string/title_BOARD" />
        <Preference
            android:key="BRAND"
            android:title="@string/title_BRAND" />
        <Preference
            android:key="HOST"
            android:title="@string/title_HOST" />
        <Preference
            android:key="VCODE"
            android:title="@string/title_VCODE" />
        <Preference
            android:key="HARDWARE"
            android:title="@string/title_HARDWARE" />
        <Preference
            android:key="BLOADER"
            android:title="@string/title_BLOADER" />
        <Preference
            android:key="SRESOLUTION"
            android:title="@string/title_SRESOLUTION" />
        <Preference
            android:key="SDENSITY"
            android:title="@string/title_SDENSITY" />
    </PreferenceCategory>

</PreferenceScreen>