<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    tools:context=".Returns"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        android:layout_height="match_parent">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/line1">

           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:id="@+id/line2"
               android:paddingLeft="5dp"
               android:paddingRight="5dp"

               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:id="@+id/routelay"
                   android:visibility="visible"
                   android:weightSum="10">

                   <AutoCompleteTextView
                       android:maxLines="1"
                       android:paddingTop="22dp"
                       android:id="@+id/route"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="2dp"
                       android:layout_weight="4"
                       android:hint="@string/trans_route"
                       android:paddingStart="4dp"
                       tools:ignore="RtlSymmetry" />

                   <ImageButton android:id="@+id/cancelr"
                       android:onClick="croute"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/cancel"
                       android:baselineAlignBottom="true"
                       android:layout_marginStart="-30dp"
                       tools:ignore="ContentDescription" />

                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/dateLayout"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="6"
                       android:paddingStart="4dp"
                       tools:ignore="RtlSymmetry">

                       <EditText
                           android:id="@+id/dateText"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:hint="@string/trans_date"
                           android:enabled="false"/>
                   </com.google.android.material.textfield.TextInputLayout>

               </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:id="@+id/cust"
                       android:visibility="visible"
                       android:weightSum="10">

                       <AutoCompleteTextView
                           android:maxLines="1"
                           android:id="@+id/actcust"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="2dp"
                           android:layout_weight="4"
                           android:hint="@string/trans_searchcust"
                           android:paddingStart="4dp"
                           tools:ignore="RtlSymmetry" />

                       <ImageButton android:id="@+id/cancelc"
                           android:onClick="ccustomer"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:background="@drawable/cancel"
                           android:baselineAlignBottom="true"
                           android:layout_marginStart="-30dp"
                           tools:ignore="ContentDescription" />

                       <AutoCompleteTextView
                           android:id="@+id/docText"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:hint="@string/trans_repname"
                           android:layout_weight="6"
                           android:paddingStart="8dp"
                           tools:ignore="RtlSymmetry"/>

                   </LinearLayout>


           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:orientation="vertical"
               android:background="#dbdce5">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:background="#dbdce5"
                   android:paddingTop="10dp"
                   android:paddingBottom="10dp"
                   android:weightSum="20">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="@string/trans_products"
                       android:layout_weight="8"
                       android:textAlignment="center"
                       android:textSize="16sp"
                       android:textStyle="normal|bold|italic"
                       android:textAllCaps="true"
                       android:textColor="#FF0000"/>

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="@string/trans_rsunit"
                       android:layout_weight="3"

                       android:textAlignment="center"
                       android:textSize="16sp"
                       android:textStyle="normal|bold|italic"
                       android:textAllCaps="true"
                       android:textColor="#FF0000"
                       android:id="@+id/textView2" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="@string/trans_qty"
                       android:textAlignment="center"
                       android:layout_weight="3"
                       android:textSize="16sp"
                       android:textStyle="normal|bold|italic"
                       android:textAllCaps="true"
                       android:textColor="#FF0000"
                       android:id="@+id/textView3" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="@string/trans_amount"
                       android:layout_weight="4"
                       android:textAlignment="center"
                       android:textSize="16sp"
                       android:textStyle="normal|bold|italic"
                       android:textAllCaps="true"
                       android:textColor="#FF0000"/>

               </LinearLayout>

               <ListView
                   android:background="#e8e8e8"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="2dp"
                   android:scrollbars="vertical"
                   android:id="@+id/list">

               </ListView>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingTop="20dp"
                   android:gravity="center"
                   android:orientation="horizontal"
                   android:background="#e8e8e8">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:text="@string/trans_totalamount"
                       android:textSize="20sp"
                       android:textColor="#000000"
                       android:textStyle="normal|bold|italic" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:hint="0.00"
                       android:id="@+id/totamt"
                       android:textSize="20sp"
                       android:textStyle="normal|bold|italic" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:text="-"
                       android:textSize="20sp"
                       android:paddingStart="10dp"
                       android:paddingEnd="10dp"
                       android:textColor="#000000"
                       android:textStyle="normal|bold|italic"
                       tools:ignore="RtlSymmetry" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:hint="0.00"
                       android:id="@+id/discount"
                       android:textSize="20sp"
                       android:textStyle="normal|bold|italic" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="5dp"
                   android:gravity="center"
                   android:background="#dbdce5"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"
                   android:focusable="true"
                   android:focusableInTouchMode="true">

                   <Button
                       android:layout_width="180dp"
                       android:layout_height="wrap_content"
                       android:text="Regular Customer"
                       android:padding="5dp"
                       android:textSize="15sp"
                       android:id="@+id/regcust"
                       android:textAlignment="center"
                       android:textAllCaps="false"
                       android:visibility="gone"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/trans_paid"
                       android:textSize="20sp"
                       android:textColor="#000000"
                       android:textStyle="normal|bold|italic" />

                   <EditText
                       android:id="@+id/amtdue"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="4"
                       android:maxLines="1"
                       android:hint="@string/return_amountpaid"
                       android:inputType="numberDecimal"/>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="5dp"
                   android:gravity="center"
                   android:background="#dbdce5"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp">

                   <androidx.appcompat.widget.AppCompatCheckBox
                       android:id="@+id/cashc"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/trans_cash"
                       android:onClick="cashcb"/>
                   <androidx.appcompat.widget.AppCompatCheckBox
                       android:id="@+id/chequec"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/trans_cheque"
                       android:onClick="chequecb"/>
                   <androidx.appcompat.widget.AppCompatCheckBox
                       android:id="@+id/creditc"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/trans_credit"
                       android:onClick="creditcb"/>

               </LinearLayout>
           </LinearLayout>
           <RelativeLayout
           android:layout_height="0dp"
           android:layout_width="0dp"
           android:visibility="invisible">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/ptLayout"
               android:layout_width="wrap_content"
               android:layout_height="45dp">

               <EditText
                   android:id="@+id/ptText"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:text=""
                   android:hint="Customer's Name"
                   android:visibility="invisible"/>

           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/ageLayout"
               android:layout_width="wrap_content"
               android:layout_height="45dp">

               <EditText
                   android:id="@+id/ageText"
                   android:layout_weight="1"
                   android:layout_width="wrap_content"
                   android:layout_height="40dp"
                   android:text=""
                   android:hint="Age"
                   android:inputType="numberSigned"
                   android:visibility="invisible"/>

           </com.google.android.material.textfield.TextInputLayout>
       </RelativeLayout>
        <LinearLayout
            android:id="@+id/ad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ExpandableListView
                android:id="@+id/ExlistView"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:dividerHeight="3dp">
            </ExpandableListView>

           <com.google.android.gms.ads.NativeExpressAdView
               xmlns:ads="http://schemas.android.com/apk/res-auto"
               android:id="@+id/adView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               ads:adSize="320x300"
               android:visibility="gone"
               ads:adUnitId="@string/sma_banner_1"/>

            <TextView
                android:id="@+id/SList"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text=""
                android:maxLines="1"
                android:visibility="invisible"/>

           </LinearLayout>
       </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/actlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:background="#FFDBDB"
        android:layout_above="@+id/genbtn"
        android:visibility="gone">

        <AutoCompleteTextView
            android:hint="@string/trans_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act"
            android:layout_marginStart="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="9" />

        <ImageButton
            android:id="@+id/cancelp"
            android:onClick="cproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel"
            android:baselineAlignBottom="true"
            android:layout_marginStart="-30dp"
            tools:ignore="ContentDescription" />

        <Button
            android:text="ADD"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnadd"
            android:layout_margin="2dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trans_generatebill"
        android:textSize="20sp"
        android:id="@+id/genbtn"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="#FF0000"
        android:typeface="sans"
        android:textStyle="normal|italic"/>

</RelativeLayout>